Created some dummy html content

--- a/frontend/views/designs.html
+++ b/frontend/views/designs.html
@@ -20,7 +20,7 @@
 
 <body>
   <div class="container" style="max-width: 30rem">
-    <h1>Welcome</h1>
+    <h1>Designs - The page where you search for designs.</h1>
   </div>
 </body>
 
