--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -1,41 +1,84 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <title>Fanicon</title>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      body{
+        background: gray;
+      }
+      .row{
+        background:white;
+        border-radius: 30px;
+      }
+      img{
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+      }
+      .btn1{
+        border: white;
+        outline: none;
+        height: 50px;
+        width: 100%;
+        background-color: black;
+        color: white;
+        border-radius: 4px;
+        font-weight: bold;
+      }
+      .btn1:hover{
+        background: white;
+        border: 1px solid;
+        color: black;
+      }
+    </style>
+  </head>
+  <body>
+    
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-lg-5">
+            <img src="/dok/Login.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-7 px-5 pt-5">
+            <h1 class="font-weight-bold py-3">Welcome to FANICON</h1>
+            <form>
+              <div class="form-row">
+                <div class="col-lg-5">
+                  <button type="button" class="btn1 mt-1 mb-2">Login</button>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-lg-5">
+                  <button type="button" class="btn1 mt-1 mb-2">Sign Up</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <style>
-    body {
-      padding: 50px;
-    }
-  </style>
-  <title>Fanicon</title>
-</head>
+    <!-- Optional JavaScript; choose one of the two! -->
 
-<body>
-  <div class="container" style="max-width: 30rem">
-    <h1>Hoi</h1>
-    <h2>This Site is under construction.</h2>
-    <h3>You can find the code in <a href="https://github.com/Cedric-Gasser/fanicon">this repository</a></h3>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-    <p></p>
-
-    <ul>
-      <li><a href="/login.html">login.html</a></li>
-      <li><a href="/signup.html">signup.html</a></li>
-      <li><a href="/home.html">home.html</a></li>
-      <li><a href="/editor.html">editor.html</a></li>
-      <li><a href="/publish.html">publish.html</a></li>
-      <li><a href="/designs.html">designs.html</a></li>
-      <li><a href="/admin.html">admin.html</a></li>
-    </ul>
-  </div>
-</body>
-
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
