--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-lg-5">
-            <img src="/dok/Login.png" class="img-fluid" alt="">
+            <img src="/frontend/logo_round.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-7 px-5 pt-5">
             <h1 class="font-weight-bold py-3">Fanicon</h1>
