--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -47,11 +47,13 @@
     
     <section class="Form my-4 mx-5">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="col-lg-1">
+          <img src="../logo_round.svg" class="img-fluid" alt="">
+        </div>
         <a class="navbar-brand" href="#">Fanicon</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -73,9 +75,6 @@
         </div>
       </nav>
       <h1 class="font-weight-bold py-3">Home</h1>
-          <div class="col-lg-5">
-            <img src="/frontend/logo_round.svg" class="img-fluid" alt="">
-          </div>
           <div>
             <div class="container">
               <div class="row">
