--- a/frontend/views/admin.html
+++ b/frontend/views/admin.html
@@ -1,27 +1,141 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <title>Fanicon</title>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      body{
+        background: white;
+      }
+      .row{
+        background:white;
+        border-radius: 30px;
+      }
+      img{
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+      }
+      .btn1{
+        border: white;
+        outline: none;
+        height: 40px;
+        width: 100%;
+        background-color: black;
+        color: white;
+        border-radius: 4px;
+        font-weight: bold;
+        margin-bottom: 7px;
+        margin-top: 4px;
+      }
+      .btn1:hover{
+        background: white;
+        border: 1px solid;
+        color: black;
+      }
+      .textinput{
+        margin-bottom: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    
+    <section class="Form my-4 mx-5">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="col-lg-1">
+          <img src="../logo_round.svg" class="img-fluid" alt="">
+        </div>
+        <a class="navbar-brand" href="#">Fanicon</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Editor <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Designoverview <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Logout <span class="sr-only"></span></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <h1 class="font-weight-bold py-3">Admin</h1>
+        <div>
+          <table class="table">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">Dispalyname</th>
+                <th scope="col">Email</th>
+                <th scope="col">Usergroup</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Lana Ming</td>
+                <td>lanaming@email.ch</td>
+                <td>Admin</td>
+              </tr>
+              <tr>
+                <td>Jacob Balisong</td>
+                <td>jacobbalisong@email.ch</td>
+                <td>Admin</td>
+              </tr>
+              <tr>
+                <td>Fritzli</td>
+                <td>fritzli@email.ch</td>
+                <td>User</td>
+              </tr>
+              <tr>
+                <td>Cole Sprouse</td>
+                <td>colesprouse@email.ch</td>
+                <td>VIP</td>
+              </tr>
+            </tbody>
+          </table>
+          <div>
+            <form>
+              <div class="form-group">
+                <textarea class="form-control" rows="20" id="editor"></textarea>
+              </div>
+              <button class="btn1" type="submit" type="submit">Save</button>
+              <button class="btn1 btn-outline-primary mr-1" type="reset">Delete</button>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="textinput form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <style>
-    body {
-      padding: 50px;
-    }
-  </style>
-  <title>Fanicon</title>
-</head>
+    <!-- Optional JavaScript; choose one of the two! -->
 
-<body>
-  <div class="container" style="max-width: 30rem">
-    <h1>Admin - Administrative tasks can be executed here.</h1>
-  </div>
-</body>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
